# alalinea-gym

./: README.md  db.sqlite3  pyproject.toml  requirements.txt  vercel.json
apps/core/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/: forms.py  urls.py  views.py
proyecto_gym/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: client.css  form.css  main.css  staff.css
static/js/: main.js
templates/: base.html
templates/gym/: client_form.html  client_list.html  home.html  payment_plans.html  staff.html
templates/users/: login.html  register.html
