[project]
name = "alalinea-gym"
version = "0.1.0"
description = "Sistema de gestión para gimnasio"
authors = [
  { name = "Juan" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "pydantic",
  "alembic",
  "python-dotenv"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "mypy"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"